--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,4 +14,5 @@ html {
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #202020;
 } 
